# math-microservice

./: .gitignore  README.md
api/: Cargo.toml
api/calc/src/: add.rs  divide.rs  lib.rs  multiply.rs  subtract.rs
api/src/: errors.rs  main.rs  models.rs
api/src/routes/: add.rs  calculations.rs  divide.rs  mod.rs  multiply.rs  subtract.rs
db/: Cargo.toml  diesel.toml
db/migrations/2025-05-22-184720_create/: down.sql  up.sql
db/src/: db.rs  lib.rs  models.rs  schema.rs
ui/: Cargo.toml
ui/page/: history.html  history.js  index.html  script.js  style.css
ui/src/: main.rs
