[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
calc = { path = "./calc" }
rocket = { version = "0.5.0", features = ["json"] }
rocket_okapi = { version = "0.9.0", features = ["swagger"] }  
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"
