[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.0", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
libsqlite3-sys = { version = "0.33.0", features = ["bundled"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"